1163: fixed overflow issue on header and content header (#1164)

--- a/src/components/ContentHeader/ContentHeader.module.scss
+++ b/src/components/ContentHeader/ContentHeader.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   background-color: var(--white-600);
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
 
   &Controls {
