--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -17,7 +17,7 @@
   &Right {
     display: flex;
     align-items: center;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
     text-wrap: nowrap;
   }
